fixed mobile buttons alignment - updated a links

--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -36,6 +36,7 @@
 
 	// REPORT BUTTONS
 	.reports-container{
+		float: none;
 		margin: 0 auto;
 	}
 
@@ -104,6 +105,7 @@
 	// REPORT BUTTONS
 	.reports-container{
 		margin-left: $gut-width;
+		float: left;
 	}
 
 	.button-container{
