--- a/styles/main.scss
+++ b/styles/main.scss
@@ -158,7 +158,6 @@ header{
 	@extend .col-lg-5;
 
 	overflow: hidden;
-	float: left;
 }
 
 .circle{
